v0.1.39: Add points to program